infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg # Default gateway name
  namespace: default
spec:
  # Reference the GatewayClass created by the Helm chart
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      # Allow HTTPRoutes from all namespaces to attach to this listener
      allowedRoutes:
        namespaces:
          from: All
        kinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
